# infirmary

./: .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: cmake.yml  msvc.yml
data/: database.db
data/document_root/style/: style.css
docs/: RULES.md
src/: CMakeLists.txt  main.cpp  server.cpp  server.h  tools.hpp
src/html/: index.html
src/server/: CMakeLists.txt  database.cpp  database.db  database.h  server.cpp  server.h  tools.hpp  view.cpp
src/server/controllers/: index.cpp  login_system.cpp  login_system.h  panel.cpp  panel.h
src/server/html/: Sign.html  panel.html  user.html
src/server/views/: index_.csp  index_.html  login.csp  login.html  panel_patient_personal.csp  panel_patient_personal_informations.csp  panel_patient_personal_informations.html  registration.csp  registration.html
src/server/views/style/: style.css
tests/: CMakeLists.txt  tester.cpp
